--- a/express_server/Html file/index.html
+++ b/express_server/Html file/index.html
@@ -42,6 +42,10 @@
         />
         <button>submit</button>
       </form>
+
+      <form>
+        <input type="text" name="mem" id="" />
+      </form>
     </div>
 
     <script src="../Javascript files/index.js"></script>
